--- a/christmas-shop/sass/components/_slider.scss
+++ b/christmas-shop/sass/components/_slider.scss
@@ -20,7 +20,7 @@
     position: relative;
     right: 0;
     transition: all 0.8s ease;
-    z-index: 2;
+    z-index: 1;
 }
 
 .slide {
